# neurogolf

./: .dockerignore  .gitignore  README.md  params.yaml
.claude/: CLAUDE.md  settings.json
.claude/agents/: pr-summarizer.md
.claude/rules/: data.md  python.md  security.md
.dvc/: config
.github/workflows/: ci.yml  submit.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/pipeline/case0/: __init__.py  __main__.py  build.py
backend/pipeline/case1/: README.md  __init__.py  __main__.py  blend.py  bundle.py  reproduce.py
backend/pipeline/case2/: README.md  __init__.py  __main__.py  build.py  downcast.py  dsl.py  onnx_ops.py  solver.py  submit_loop.py
backend/pipeline/case2/golf_wins/: task002.onnx  task004.onnx  task008.onnx  task023.onnx  task029.onnx  task044.onnx  task055.onnx  task077.onnx  task080.onnx  task089.onnx  task138.onnx  task158.onnx  task161.onnx  task165.onnx  task174.onnx  task182.onnx  task187.onnx  task191.onnx  task196.onnx  task201.onnx  task202.onnx  task204.onnx  task205.onnx  task209.onnx  task219.onnx  task222.onnx  task243.onnx  task251.onnx  task255.onnx  task277.onnx  task279.onnx  task340.onnx  task349.onnx  task350.onnx  task359.onnx  task363.onnx  task364.onnx  task367.onnx  task377.onnx  task382.onnx  (+3 more)
backend/pipeline/case3/: README.md  __init__.py  __main__.py  apply_surgery.py  arc.py  blend.py  builders.py  csvblend.py  floodfill.py  linsep.py  lookup.py  override.py  panels.py  residual.py  run.py  smalllookup.py  solvers.py  surgery.py
backend/scratchpad/: batch.py  build_conv.py  cand_t192.onnx  conv_results.csv  diag.py  faithful_audit.py  inspect_task.py  klocal.py  klocal_cands.csv  ort_check.py  rand_check.py  rank.csv  sep.py  sep_t192_k3.npz
backend/scratchpad/conv_wins/: task192.onnx  task359.onnx
backend/src/dataset/: __init__.py  encoding.py  loader.py  types.py
backend/src/evaluate/: __init__.py  scorer.py
backend/src/solvers/: __init__.py  conv.py  identity.py  recolor.py  run.py  spatial.py
backend/src/submit/: __init__.py  __main__.py  auth.py  gate.py  history.py  kaggle_api.py  packager.py  validator.py
backend/tests/integration/src/submit/: test_kaggle_api.py
backend/tests/unit/pipeline/case0/: test_build.py
backend/tests/unit/pipeline/case1/: test_blend.py  test_reproduce.py
backend/tests/unit/pipeline/case2/: test_onnx_ops.py  test_solver.py
backend/tests/unit/pipeline/case3/: test_builders.py  test_floodfill.py  test_linsep.py  test_run.py  test_solvers.py  test_surgery.py  test_surgery_runtime.py
backend/tests/unit/src/dataset/: test_encoding.py  test_loader.py
backend/tests/unit/src/evaluate/: test_scorer.py
backend/tests/unit/src/solvers/: test_solvers.py
backend/tests/unit/src/submit/: conftest.py  test_auth.py  test_gate.py  test_history.py  test_validator.py
data/output/: onnx.dvc
dev/: create-worktree  ecs-connect  format  lint  setup  submit  sync-data  test-bot
docs/competition/: 20260625_notebooks.md  abstract.md
docs/develop/: MIGRATION.md  ecs-manual-prompts.md
docs/experiment/: 20260628_case3_plan.md  20260628_case3_result.md  20260629_case3_cycle12_handgolf.md  20260629_case3_cycle13_plan.md  20260629_case3_cycle13_result.md  20260629_case3_cycle14_plan.md  20260629_case3_cycle6_plan.md  20260629_case3_cycle6_result.md  20260629_case3_cycle8_plan.md  20260629_case3_cycle8_result.md  20260629_case3_cycle9_result.md  20260629_case3_plan.md  20260629_case3_result.md  20260630_case100_plan.md  20260630_case100_result.md  20260630_case101_plan.md  20260630_case101_result.md  20260630_case102_plan.md  20260630_case102_result.md  20260630_case103_plan.md  20260630_case103_result.md  20260630_case104_plan.md  20260630_case104_result.md  20260630_case105_plan.md  20260630_case105_result.md  20260630_case106_plan.md  20260630_case106_result.md  20260630_case107_plan.md  20260630_case107_result.md  20260630_case108_plan.md  20260630_case108_result.md  20260630_case109_plan.md  20260630_case109_result.md  20260630_case10_plan.md  20260630_case10_result.md  20260630_case110_plan.md  20260630_case110_result.md  20260630_case111_plan.md  (+1096 more)
infra/: .gitignore  README.md
(+53 files in other folders)
