[project]
name = "neurogolf"
version = "0.1.0"
description = "Kaggle NeuroGolf 2026 — minimal ONNX solvers for ARC-AGI (neural golf)"
readme = "../README.md"
authors = [{ name = "Yuri Nakayama", email = "yuri620620@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    # Kaggle submit (`kaggle` CLI via subprocess) + DVC artifact pull.
    "kaggle>=1.6.17",
    "dvc[s3]>=3.55",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.2",
    # ARC-AGI grids + ONNX build / validation / cost estimation.
    "numpy>=2.2.6",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/dataset",
    "src/solvers",
    "src/evaluate",
    "src/submit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    { include-group = "lint" },
]
lint = [
    "mypy>=1.15.0",
    "pylint>=3.3.2",
    "pytest-coverage>=0.0",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6",
    "ruff>=0.8.4",
    "types-pyyaml>=6.0.12.20250915",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "site-packages",
    "venv",
    ".claude",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"src/submit/__main__.py" = ["B008"]  # typer は引数デフォルトで Option を呼ぶのが標準
"pipeline/case1/__main__.py" = ["B008"]  # 同上（typer CLI）
"pipeline/case0/__main__.py" = ["B008"]  # 同上（typer CLI）
# Test fixtures often need long inline literals; readability wins over 88-char limit.
"tests/**/test_*.py" = ["E501"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
exclude = [
    ".venv",
    ".github",
    ".claude",
    "poetry.lock",
    "__pycache__",
]
python_version = "3.13"
strict = true
disallow_any_decorated = false
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    '--rootdir=tests',
    '--strict-config',
    '--cov=src',
    '--log-cli-level=INFO',
    '-p no:cacheprovider',
    '-n=auto',
    '--dist=worksteal',
    '-ra',
]
testpaths = ['tests']
cache_dir = "tests/.pytest_cache"
filterwarnings = ["ignore::pydantic.PydanticDeprecatedSince20"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (training runs, large fixtures)",
    "e2e: marks tests as end-to-end tests",
    "timeout: marks tests with an execution timeout",
]

[tool.coverage.run]
branch = true
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "if __name__ == .__main__.",
]

[tool.coverage.xml]
output = "tests/coverage/coverage.xml"

[tool.coverage.html]
directory = "tests/coverage/report"

[tool.pyright]
typeCheckingMode = "basic"
include = ["src", "tests"]
exclude = [
    ".venv",
    "**/traces",
    "**/traces_ts",
    "**/example_files**",
    "**/.pkl",
    "**/bazel-bin",
    "**/bazel",
    "**/resources/**",
    "**/tests/**",
    "**/node_modules",
    "**/.next",
    "**/__pycache__",
    "**/.coverage/**",
    "**/.git",
    "**/dist/**",
    "**/build/**",
    "**/.husky",
    "**/migrations",
]
ignore = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "**/dist",
    "**/.vscode",
    "**/*.pyi",
    "**/__init__.py",
]
venvPath = "."
venv = ".venv"

[tool.pylint]
ignore-paths = [".venv", ".github"]
max-line-length = 88
